# DrivingLicenseIdentify

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DriverLicense.cpp  DriverLicense.h  DrivingLicense.cpp  DrivingLicense.h  InforDetect.cpp  InforDetect.h  InformationDetect.cpp  InformationDetect.h  InformationLocate.cpp  InformationLocate.h  Log.md  README.md  RedMarkArea.cpp  RedMarkArea.h  Tesseract.py  include.h  main.cpp
